@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
-            <version>13.0.0</version>
+            <version>13.2.0</version>
         </dependency>
 
         <dependency>
