@@ -1,6 +1,7 @@
 package me.zombie_striker.qg.hooks.protection.implementation;
 
 import com.palmergames.bukkit.towny.TownyAPI;
+import com.palmergames.bukkit.towny.object.Town;
 import me.zombie_striker.qg.hooks.protection.ProtectionHook;
 import org.bukkit.Location;
 
@@ -16,7 +17,10 @@ public class TownyHook implements ProtectionHook {
     @Override
     public boolean canExplode(Location location) {
         try {
-            return TownyAPI.getInstance().getTown(location) == null;
+            Town towny = TownyAPI.getInstance().getTown(location);
+            if (towny == null) return true;
+
+            return towny.isExplosion();
         } catch (Throwable ignored) { return true; }
     }
 
