@@ -1,6 +1,7 @@
 2.0.19
   - Fixed resourcepack for 1.21.x
   - 1.21.5 support
+  - Fixed towny explosions
 
 2.0.18
   - Fixed resourcepack for 1.21.4
